--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,20 @@
 version: '3.8'
 services:
-  go-app:
-    image: golang:latest
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
     volumes:
-      - ./src:/go/src/app
-    working_dir: /go/src/app
-    command: go run main.go
+      - ./src:/app
     ports:
       - "8080:8080"
+
+  nginx:
+    image: nginx:latest
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./src:/app
+    depends_on:
+      - app
